Fix broken layout when menu is open

--- a/searx/static/themes/etheme/less/etheme/search.less
+++ b/searx/static/themes/etheme/less/etheme/search.less
@@ -115,7 +115,7 @@
     justify-content: space-between;
     font-size: @fontsize_small;
     padding-bottom: @spacing_large;
-    padding-top: @spacing_large;
+    padding-top: @spacing_x-large;
     padding-left: @spacing_x-large;
     padding-right: @spacing_x-large;
 
